--- a/blog.html
+++ b/blog.html
@@ -121,14 +121,39 @@
       <div class="container">
         <div class="blog-cont">
           <div class="blog">
-            <figure class="blog-figure">
-              <img
-                class="blog-img"
-                alt="image1"
-                src="images/blog/01.jpg"
-                class="img-fluid"
-              />
-            </figure>
+            <a href="post.html">
+              <figure class="blog-figure">
+                <img
+                  class="blog-img"
+                  alt="image1"
+                  src="images/blog/01.jpg"
+                  class="img-fluid"
+                />
+              </figure>
+            </a>
+            <div class="blog-content">
+              <a class="blog-link" href="post.html"
+                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
+                لصفحة ما
+              </a>
+              <p class="blog-pargh">
+                سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
+                الفقرات في الصفحة التي
+              </p>
+              <a class="blog-read" href="post.html"> قراءة المزيد </a>
+            </div>
+          </div>
+          <div class="blog">
+            <a href="post.html">
+              <figure class="blog-figure">
+                <img
+                  class="blog-img"
+                  alt="image1"
+                  src="images/blog/02.jpg"
+                  class="img-fluid"
+                />
+              </figure>
+            </a>
             <div class="blog-content">
               <a class="blog-link" href="#"
                 >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
@@ -142,14 +167,16 @@
             </div>
           </div>
           <div class="blog">
-            <figure class="blog-figure">
-              <img
-                class="blog-img"
-                alt="image1"
-                src="images/blog/02.jpg"
-                class="img-fluid"
-              />
-            </figure>
+            <a href="post.html">
+              <figure class="blog-figure">
+                <img
+                  class="blog-img"
+                  alt="image1"
+                  src="images/blog/03.jpg"
+                  class="img-fluid"
+                />
+              </figure>
+            </a>
             <div class="blog-content">
               <a class="blog-link" href="#"
                 >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
@@ -163,14 +190,39 @@
             </div>
           </div>
           <div class="blog">
-            <figure class="blog-figure">
-              <img
-                class="blog-img"
-                alt="image1"
-                src="images/blog/03.jpg"
-                class="img-fluid"
-              />
-            </figure>
+            <a href="post.html">
+              <figure class="blog-figure">
+                <img
+                  class="blog-img"
+                  alt="image1"
+                  src="images/blog/01.jpg"
+                  class="img-fluid"
+                />
+              </figure>
+            </a>
+            <div class="blog-content">
+              <a class="blog-link" href="post.html"
+                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
+                لصفحة ما
+              </a>
+              <p class="blog-pargh">
+                سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
+                الفقرات في الصفحة التي
+              </p>
+              <a class="blog-read" href="post.html"> قراءة المزيد </a>
+            </div>
+          </div>
+          <div class="blog">
+            <a href="post.html">
+              <figure class="blog-figure">
+                <img
+                  class="blog-img"
+                  alt="image1"
+                  src="images/blog/02.jpg"
+                  class="img-fluid"
+                />
+              </figure>
+            </a>
             <div class="blog-content">
               <a class="blog-link" href="#"
                 >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
@@ -184,14 +236,16 @@
             </div>
           </div>
           <div class="blog">
-            <figure class="blog-figure">
-              <img
-                class="blog-img"
-                alt="image1"
-                src="images/blog/01.jpg"
-                class="img-fluid"
-              />
-            </figure>
+            <a href="post.html">
+              <figure class="blog-figure">
+                <img
+                  class="blog-img"
+                  alt="image1"
+                  src="images/blog/03.jpg"
+                  class="img-fluid"
+                />
+              </figure>
+            </a>
             <div class="blog-content">
               <a class="blog-link" href="#"
                 >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
@@ -205,14 +259,39 @@
             </div>
           </div>
           <div class="blog">
-            <figure class="blog-figure">
-              <img
-                class="blog-img"
-                alt="image1"
-                src="images/blog/02.jpg"
-                class="img-fluid"
-              />
-            </figure>
+            <a href="post.html">
+              <figure class="blog-figure">
+                <img
+                  class="blog-img"
+                  alt="image1"
+                  src="images/blog/01.jpg"
+                  class="img-fluid"
+                />
+              </figure>
+            </a>
+            <div class="blog-content">
+              <a class="blog-link" href="post.html"
+                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
+                لصفحة ما
+              </a>
+              <p class="blog-pargh">
+                سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
+                الفقرات في الصفحة التي
+              </p>
+              <a class="blog-read" href="post.html"> قراءة المزيد </a>
+            </div>
+          </div>
+          <div class="blog">
+            <a href="post.html">
+              <figure class="blog-figure">
+                <img
+                  class="blog-img"
+                  alt="image1"
+                  src="images/blog/02.jpg"
+                  class="img-fluid"
+                />
+              </figure>
+            </a>
             <div class="blog-content">
               <a class="blog-link" href="#"
                 >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
@@ -226,14 +305,16 @@
             </div>
           </div>
           <div class="blog">
-            <figure class="blog-figure">
-              <img
-                class="blog-img"
-                alt="image1"
-                src="images/blog/03.jpg"
-                class="img-fluid"
-              />
-            </figure>
+            <a href="post.html">
+              <figure class="blog-figure">
+                <img
+                  class="blog-img"
+                  alt="image1"
+                  src="images/blog/03.jpg"
+                  class="img-fluid"
+                />
+              </figure>
+            </a>
             <div class="blog-content">
               <a class="blog-link" href="#"
                 >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
@@ -247,14 +328,39 @@
             </div>
           </div>
           <div class="blog">
-            <figure class="blog-figure">
-              <img
-                class="blog-img"
-                alt="image1"
-                src="images/blog/01.jpg"
-                class="img-fluid"
-              />
-            </figure>
+            <a href="post.html">
+              <figure class="blog-figure">
+                <img
+                  class="blog-img"
+                  alt="image1"
+                  src="images/blog/01.jpg"
+                  class="img-fluid"
+                />
+              </figure>
+            </a>
+            <div class="blog-content">
+              <a class="blog-link" href="post.html"
+                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
+                لصفحة ما
+              </a>
+              <p class="blog-pargh">
+                سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
+                الفقرات في الصفحة التي
+              </p>
+              <a class="blog-read" href="post.html"> قراءة المزيد </a>
+            </div>
+          </div>
+          <div class="blog">
+            <a href="post.html">
+              <figure class="blog-figure">
+                <img
+                  class="blog-img"
+                  alt="image1"
+                  src="images/blog/02.jpg"
+                  class="img-fluid"
+                />
+              </figure>
+            </a>
             <div class="blog-content">
               <a class="blog-link" href="#"
                 >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
@@ -268,98 +374,16 @@
             </div>
           </div>
           <div class="blog">
-            <figure class="blog-figure">
-              <img
-                class="blog-img"
-                alt="image1"
-                src="images/blog/02.jpg"
-                class="img-fluid"
-              />
-            </figure>
-            <div class="blog-content">
-              <a class="blog-link" href="#"
-                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
-                لصفحة ما
-              </a>
-              <p class="blog-pargh">
-                سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
-                الفقرات في الصفحة التي
-              </p>
-              <a class="blog-read" href="#"> قراءة المزيد </a>
-            </div>
-          </div>
-          <div class="blog">
-            <figure class="blog-figure">
-              <img
-                class="blog-img"
-                alt="image1"
-                src="images/blog/03.jpg"
-                class="img-fluid"
-              />
-            </figure>
-            <div class="blog-content">
-              <a class="blog-link" href="#"
-                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
-                لصفحة ما
-              </a>
-              <p class="blog-pargh">
-                سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
-                الفقرات في الصفحة التي
-              </p>
-              <a class="blog-read" href="#"> قراءة المزيد </a>
-            </div>
-          </div>
-          <div class="blog">
-            <figure class="blog-figure">
-              <img
-                class="blog-img"
-                alt="image1"
-                src="images/blog/01.jpg"
-                class="img-fluid"
-              />
-            </figure>
-            <div class="blog-content">
-              <a class="blog-link" href="#"
-                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
-                لصفحة ما
-              </a>
-              <p class="blog-pargh">
-                سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
-                الفقرات في الصفحة التي
-              </p>
-              <a class="blog-read" href="#"> قراءة المزيد </a>
-            </div>
-          </div>
-          <div class="blog">
-            <figure class="blog-figure">
-              <img
-                class="blog-img"
-                alt="image1"
-                src="images/blog/02.jpg"
-                class="img-fluid"
-              />
-            </figure>
-            <div class="blog-content">
-              <a class="blog-link" href="#"
-                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
-                لصفحة ما
-              </a>
-              <p class="blog-pargh">
-                سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
-                الفقرات في الصفحة التي
-              </p>
-              <a class="blog-read" href="#"> قراءة المزيد </a>
-            </div>
-          </div>
-          <div class="blog">
-            <figure class="blog-figure">
-              <img
-                class="blog-img"
-                alt="image1"
-                src="images/blog/03.jpg"
-                class="img-fluid"
-              />
-            </figure>
+            <a href="post.html">
+              <figure class="blog-figure">
+                <img
+                  class="blog-img"
+                  alt="image1"
+                  src="images/blog/03.jpg"
+                  class="img-fluid"
+                />
+              </figure>
+            </a>
             <div class="blog-content">
               <a class="blog-link" href="#"
                 >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
