--- a/index-en.html
+++ b/index-en.html
@@ -60,7 +60,9 @@
               </div>
               <ul class="big-menu list-unstyled">
                 <li>
-                  <a href="#" role="button" data-href="#courses"> last workshops</a>
+                  <a href="#" role="button" data-href="#courses">
+                    last workshops</a
+                  >
                 </li>
                 <li>
                   <a href="#" role="button" data-href="#influencer">
@@ -105,11 +107,13 @@
         <div class="main-cont">
           <div class="main-info">
             <h1 class="main-title wow fadeInDown" wow-data-delay="5s">
-              Minajm platform enables influencers to provide their services within the Kingdom with ease
+              Minajm platform enables influencers to provide their services
+              within the Kingdom with ease
             </h1>
             <p class="main-pargh wow bounceInUp center" wow-data-delay="5s">
-              If you offer training courses, workshops, recorded sessions or downloadable references,
-              Mine platform made everything easier for you
+              If you offer training courses, workshops, recorded sessions or
+              downloadable references, Mine platform made everything easier for
+              you
             </p>
             <div class="btn-cont">
               <a href="form.html" class="first-btn" rel="nofollow">
@@ -141,14 +145,12 @@
         </h2>
         <div class="courses-container" id="mix-container">
           <div class="mix-btn-cont">
-            <button class="mix-btn" type="button" data-filter="all">
-              all
-            </button>
+            <button class="mix-btn" type="button" data-filter="all">all</button>
             <button class="mix-btn" type="button" data-filter=".category-a">
               Marketing
             </button>
             <button class="mix-btn" type="button" data-filter=".category-b">
-               design
+              design
             </button>
             <button class="mix-btn" type="button" data-filter=".category-c">
               programming
@@ -177,8 +179,8 @@
                       <div class="product-content">
                         <a class="product-category" href="#!"> Workshop</a>
                         <p class="product-title">
-                          How to collect and analyze customer data to increase sales
-                          (practical application on store project data)
+                          How to collect and analyze customer data to increase
+                          sales (practical application on store project data)
                         </p>
                         <a href="#" class="product-link"> subscribe now</a>
                       </div>
@@ -192,10 +194,12 @@
                         </a>
                       </div>
                       <div class="product-content">
-                        <a class="product-category" href="#!"> Training course</a>
+                        <a class="product-category" href="#!">
+                          Training course</a
+                        >
                         <p class="product-title">
-                          Managing crises and problems and making effective decisions at home
-                          or work
+                          Managing crises and problems and making effective
+                          decisions at home or work
                         </p>
                         <a href="#" class="product-link"> subscribe now</a>
                       </div>
@@ -209,10 +213,12 @@
                         </a>
                       </div>
                       <div class="product-content">
-                        <a class="product-category" href="#!"> recorded session</a>
+                        <a class="product-category" href="#!">
+                          recorded session</a
+                        >
                         <p class="product-title">
-                          Developing the user experience for an e-commerce application (app
-                          My work on a client project)
+                          Developing the user experience for an e-commerce
+                          application (app My work on a client project)
                         </p>
                         <a href="#" class="product-link"> subscribe now</a>
                       </div>
@@ -245,12 +251,10 @@
       <div class="container">
         <div class="influencer-container">
           <h2 class="influencer-head wow fadeInDown" wow-data-delay="5s">
-            Join a large number of influencers in various fields from all over the country
-            Arabi
+            Join a large number of influencers in various fields from all over
+            the country Arabi
           </h2>
-          <a href="#" class="influencer-link" rel="nofollow">
-            Join us now
-          </a>
+          <a href="#" class="influencer-link" rel="nofollow"> Join us now </a>
           <div class="influencer-slider">
             <div class="swiper-container">
               <div class="swiper-wrapper">
@@ -351,22 +355,25 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="blog">
-                  <figure class="blog-figure">
-                    <img
-                      class="blog-img"
-                      alt="image1"
-                      src="images/blog/01.jpg"
-                      class="img-fluid"
-                    />
-                  </figure>
+                  <a href="post-en.html">
+                    <figure class="blog-figure">
+                      <img
+                        class="blog-img"
+                        alt="image1"
+                        src="images/blog/01.jpg"
+                        class="img-fluid"
+                      />
+                    </figure>
+                  </a>
                   <div class="blog-content">
                     <a class="blog-link" href="#"
-                      >A proven fact from a long time ago is that readable content
-                      for a page
+                      >A proven fact from a long time ago is that readable
+                      content for a page
                     </a>
                     <p class="blog-pargh">
-                      It will distract the reader from focusing on the external appearance of the text or the form of placement
-                      paragraphs on the page that
+                      It will distract the reader from focusing on the external
+                      appearance of the text or the form of placement paragraphs
+                      on the page that
                     </p>
                     <a class="blog-read" href="#"> Read more</a>
                   </div>
@@ -374,22 +381,25 @@
               </div>
               <div class="swiper-slide">
                 <div class="blog">
-                  <figure class="blog-figure">
-                    <img
-                      class="blog-img"
-                      alt="image1"
-                      src="images/blog/02.jpg"
-                      class="img-fluid"
-                    />
-                  </figure>
+                  <a href="post-en.html">
+                    <figure class="blog-figure">
+                      <img
+                        class="blog-img"
+                        alt="image1"
+                        src="images/blog/02.jpg"
+                        class="img-fluid"
+                      />
+                    </figure>
+                  </a>
                   <div class="blog-content">
                     <a class="blog-link" href="#"
-                      >A proven fact from a long time ago is that readable content
-                      for a page
+                      >A proven fact from a long time ago is that readable
+                      content for a page
                     </a>
                     <p class="blog-pargh">
-                      It will distract the reader from focusing on the external appearance of the text or the form of placement
-                      paragraphs on the page that
+                      It will distract the reader from focusing on the external
+                      appearance of the text or the form of placement paragraphs
+                      on the page that
                     </p>
                     <a class="blog-read" href="#"> Read more</a>
                   </div>
@@ -397,22 +407,25 @@
               </div>
               <div class="swiper-slide">
                 <div class="blog">
-                  <figure class="blog-figure">
-                    <img
-                      class="blog-img"
-                      alt="image1"
-                      src="images/blog/03.jpg"
-                      class="img-fluid"
-                    />
-                  </figure>
+                  <a href="post-en.html">
+                    <figure class="blog-figure">
+                      <img
+                        class="blog-img"
+                        alt="image1"
+                        src="images/blog/03.jpg"
+                        class="img-fluid"
+                      />
+                    </figure>
+                  </a>
                   <div class="blog-content">
                     <a class="blog-link" href="#"
-                      >A proven fact from a long time ago is that readable content
-                      for a page
+                      >A proven fact from a long time ago is that readable
+                      content for a page
                     </a>
                     <p class="blog-pargh">
-                      It will distract the reader from focusing on the external appearance of the text or the form of placement
-                      paragraphs on the page that
+                      It will distract the reader from focusing on the external
+                      appearance of the text or the form of placement paragraphs
+                      on the page that
                     </p>
                     <a class="blog-read" href="#"> Read more</a>
                   </div>
@@ -428,7 +441,7 @@
             <i class="las la-arrow-left"></i>
           </div>
         </div>
-        <a href="#" class="blog-ancor"> Show more</a>
+        <a href="blog-en.html" class="blog-ancor"> Show more</a>
       </div>
     </section>
     <!-- blog slider -->
@@ -446,8 +459,8 @@
                 <span>Address</span>
               </h3>
               <p class="contact-pargh">
-                43 Salah El Din Al Ayoubi St., next to Al Ahly Bank, Riyadh - Kingdom
-                Saudi Arab
+                43 Salah El Din Al Ayoubi St., next to Al Ahly Bank, Riyadh -
+                Kingdom Saudi Arab
               </p>
             </div>
             <div class="contact-box">
@@ -486,8 +499,8 @@
           <div class="footer-form-cont">
             <div class="form-head">
               <h2>
-                Send us your inquiry or suggestion now and we will respond to you as soon as possible
-                Maybe
+                Send us your inquiry or suggestion now and we will respond to
+                you as soon as possible Maybe
               </h2>
             </div>
             <form action="" class="footer-form">
@@ -539,7 +552,9 @@
             </form>
           </div>
         </div>
-        <p class="copy-right">© Mine 2022. Sponsored by Shop, All Rights Reserved</p>
+        <p class="copy-right">
+          © Mine 2022. Sponsored by Shop, All Rights Reserved
+        </p>
       </div>
     </footer>
     <!-- footer section -->
