--- a/index.html
+++ b/index.html
@@ -351,14 +351,16 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="blog">
-                  <figure class="blog-figure">
-                    <img
-                      class="blog-img"
-                      alt="image1"
-                      src="images/blog/01.jpg"
-                      class="img-fluid"
-                    />
-                  </figure>
+                  <a href="post.html">
+                    <figure class="blog-figure">
+                      <img
+                        class="blog-img"
+                        alt="image1"
+                        src="images/blog/01.jpg"
+                        class="img-fluid"
+                      />
+                    </figure>
+                  </a>
                   <div class="blog-content">
                     <a class="blog-link" href="#"
                       >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
@@ -374,14 +376,16 @@
               </div>
               <div class="swiper-slide">
                 <div class="blog">
-                  <figure class="blog-figure">
-                    <img
-                      class="blog-img"
-                      alt="image1"
-                      src="images/blog/02.jpg"
-                      class="img-fluid"
-                    />
-                  </figure>
+                  <a href="post.html">
+                    <figure class="blog-figure">
+                      <img
+                        class="blog-img"
+                        alt="image1"
+                        src="images/blog/02.jpg"
+                        class="img-fluid"
+                      />
+                    </figure>
+                  </a>
                   <div class="blog-content">
                     <a class="blog-link" href="#"
                       >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
@@ -397,14 +401,16 @@
               </div>
               <div class="swiper-slide">
                 <div class="blog">
-                  <figure class="blog-figure">
-                    <img
-                      class="blog-img"
-                      alt="image1"
-                      src="images/blog/03.jpg"
-                      class="img-fluid"
-                    />
-                  </figure>
+                  <a href="post-en.html">
+                    <figure class="blog-figure">
+                      <img
+                        class="blog-img"
+                        alt="image1"
+                        src="images/blog/03.jpg"
+                        class="img-fluid"
+                      />
+                    </figure>
+                  </a>
                   <div class="blog-content">
                     <a class="blog-link" href="#"
                       >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
@@ -428,7 +434,7 @@
             <i class="las la-arrow-left"></i>
           </div>
         </div>
-        <a href="#" class="blog-ancor"> عرض المزيد </a>
+        <a href="blog.html" class="blog-ancor"> عرض المزيد </a>
       </div>
     </section>
     <!-- blog slider -->
