--- a/blog.html
+++ b/blog.html
@@ -52,11 +52,21 @@
       <div class="top-header">
         <div class="container">
           <div class="nav-header">
-            <figure class="img-logo">
-              <a href="index.html"
-                ><img src="images/logo.png" class="img-fluid" alt="img-logo"
-              /></a>
-            </figure>
+            <div class="logo-cont">
+              <figure class="img-logo">
+                <a href="index.html"
+                  ><img src="images/logo.png" class="img-fluid" alt="img-logo"
+                /></a>
+              </figure>
+              <figure class="second-logo">
+                <a href="index.html"
+                  ><img
+                    src="images/second-logo.png"
+                    class="img-fluid"
+                    alt="img-logo"
+                /></a>
+              </figure>
+            </div>
             <div class="navgition">
               <div class="nav-head">
                 <a href="#" class="login-ancor">
@@ -69,9 +79,7 @@
                   <a href="#" role="button"> آخر الورش </a>
                 </li>
                 <li>
-                  <a href="#" role="button">
-                    المؤثرين</a
-                  >
+                  <a href="#" role="button"> المؤثرين</a>
                 </li>
                 <li>
                   <a href="#" role="button"> المدونة </a>
@@ -106,14 +114,14 @@
     </header>
     <!-- header section     -->
     <!-- breadcrumb section -->
-    <section
-      class="breadcrumb-sec"
-    >
+    <section class="breadcrumb-sec">
       <div class="container">
         <h2 class="page-head fixall">المدونة</h2>
         <ol class="breadcrumb">
           <li class="item-home">
-            <a class="bread-link bread-home aFixx" href="index.html">الرئيسية </a>
+            <a class="bread-link bread-home aFixx" href="index.html"
+              >الرئيسية
+            </a>
           </li>
           <li class="active item-23">
             <span class="bread-current"> المدونة</span>
@@ -139,8 +147,7 @@
             </a>
             <div class="blog-content">
               <a class="blog-link" href="post.html"
-                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
-                لصفحة ما
+                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما
               </a>
               <p class="blog-pargh">
                 سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
@@ -162,8 +169,7 @@
             </a>
             <div class="blog-content">
               <a class="blog-link" href="#"
-                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
-                لصفحة ما
+                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما
               </a>
               <p class="blog-pargh">
                 سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
@@ -185,8 +191,7 @@
             </a>
             <div class="blog-content">
               <a class="blog-link" href="#"
-                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
-                لصفحة ما
+                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما
               </a>
               <p class="blog-pargh">
                 سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
@@ -208,8 +213,7 @@
             </a>
             <div class="blog-content">
               <a class="blog-link" href="post.html"
-                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
-                لصفحة ما
+                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما
               </a>
               <p class="blog-pargh">
                 سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
@@ -231,8 +235,7 @@
             </a>
             <div class="blog-content">
               <a class="blog-link" href="#"
-                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
-                لصفحة ما
+                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما
               </a>
               <p class="blog-pargh">
                 سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
@@ -254,8 +257,7 @@
             </a>
             <div class="blog-content">
               <a class="blog-link" href="#"
-                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
-                لصفحة ما
+                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما
               </a>
               <p class="blog-pargh">
                 سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
@@ -277,8 +279,7 @@
             </a>
             <div class="blog-content">
               <a class="blog-link" href="post.html"
-                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
-                لصفحة ما
+                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما
               </a>
               <p class="blog-pargh">
                 سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
@@ -300,8 +301,7 @@
             </a>
             <div class="blog-content">
               <a class="blog-link" href="#"
-                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
-                لصفحة ما
+                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما
               </a>
               <p class="blog-pargh">
                 سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
@@ -323,8 +323,7 @@
             </a>
             <div class="blog-content">
               <a class="blog-link" href="#"
-                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
-                لصفحة ما
+                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما
               </a>
               <p class="blog-pargh">
                 سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
@@ -346,8 +345,7 @@
             </a>
             <div class="blog-content">
               <a class="blog-link" href="post.html"
-                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
-                لصفحة ما
+                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما
               </a>
               <p class="blog-pargh">
                 سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
@@ -369,8 +367,7 @@
             </a>
             <div class="blog-content">
               <a class="blog-link" href="#"
-                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
-                لصفحة ما
+                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما
               </a>
               <p class="blog-pargh">
                 سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
@@ -392,8 +389,7 @@
             </a>
             <div class="blog-content">
               <a class="blog-link" href="#"
-                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء
-                لصفحة ما
+                >هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما
               </a>
               <p class="blog-pargh">
                 سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع
