--- a/index-en.html
+++ b/index-en.html
@@ -48,15 +48,25 @@
     </div>
     <!-- preloader -->
     <!-- header section -->
-    <header class="header">
+    <header class="header home-header">
       <div class="top-header">
         <div class="container">
           <div class="nav-header">
-            <figure class="img-logo">
-              <a href="index-en.html"
-                ><img src="images/logo.png" class="img-fluid" alt="img-logo"
-              /></a>
-            </figure>
+            <div class="logo-cont">
+              <figure class="img-logo">
+                <a href="index.html"
+                  ><img src="images/logo.png" class="img-fluid" alt="img-logo"
+                /></a>
+              </figure>
+              <figure class="second-logo">
+                <a href="index.html"
+                  ><img
+                    src="images/second-logo.png"
+                    class="img-fluid"
+                    alt="img-logo"
+                /></a>
+              </figure>
+            </div>
             <div class="navgition">
               <div class="nav-head">
                 <a href="#" class="login-ancor">
@@ -107,42 +117,39 @@
       </div>
     </header>
     <!-- header section     -->
-    <!-- main slider -->
+    <!-- main-->
     <main class="main">
       <div class="container">
         <div class="main-cont">
           <div class="main-info">
             <h1 class="main-title wow fadeInDown" wow-data-delay="5s">
-              Minajm platform enables influencers to provide their services
-              within the Kingdom with ease
+              Mawajm platform enables influencers to provide their services with ease
             </h1>
             <p class="main-pargh wow bounceInUp center" wow-data-delay="5s">
-              If you offer training courses, workshops, recorded sessions or
-              downloadable references, Mine platform made everything easier for
-              you
+              Training courses, meetings, recorded sessions and your digital products
             </p>
             <div class="btn-cont">
               <a href="form.html" class="first-btn" rel="nofollow">
                 Join us now</a
               >
-              <a href="form.html" class="second-btn" rel="nofollow">
+              <!-- <a href="form.html" class="second-btn" rel="nofollow">
                 For more talk to us</a
-              >
+              > -->
             </div>
           </div>
         </div>
       </div>
       <div class="main-background">
         <figure>
-          <img src="images/main/01.png" alt="main-background" />
+          <img src="images/main/main-bg.jpg" alt="main-background" />
         </figure>
       </div>
       <button
         class="header-scroll-down-butt"
         id="scroll-to-about-section"
-      ></button>
+      </button>
     </main>
-    <!-- main slider -->
+    <!-- main-->
     <!-- courses section -->
     <section class="courses-section" id="courses">
       <div class="container">
