--- a/post.html
+++ b/post.html
@@ -52,11 +52,21 @@
       <div class="top-header">
         <div class="container">
           <div class="nav-header">
-            <figure class="img-logo">
-              <a href="index.html"
-                ><img src="images/logo.png" class="img-fluid" alt="img-logo"
-              /></a>
-            </figure>
+            <div class="logo-cont">
+              <figure class="img-logo">
+                <a href="index.html"
+                  ><img src="images/logo.png" class="img-fluid" alt="img-logo"
+                /></a>
+              </figure>
+              <figure class="second-logo">
+                <a href="index.html"
+                  ><img
+                    src="images/second-logo.png"
+                    class="img-fluid"
+                    alt="img-logo"
+                /></a>
+              </figure>
+            </div>
             <div class="navgition">
               <div class="nav-head">
                 <a href="#" class="login-ancor">
